@@ -1,6 +1,6 @@
 UI
 - Menu when starting up applet
-- Undo button: Disable for the opposing player when it is current player's turn
+- Undo button: Change the button so it actually indicates that it is for undoing moves
 
 Standard Chess
 - 50 move rule and threefold repetition (hash table of FEN's)
